2015-11-07  Richard Sandiford  <richard.sandiford@arm.com>

	* builtins.c (fold_builtin_classify): Move constant cases to...
	* fold-const-call.c (fold_const_call_ss): ...here.

2015-11-07  Richard Sandiford  <richard.sandiford@arm.com>

	* builtins.h (c_getstr): Move to...
	* fold-const.h (c_getstr): ...here.
	* builtins.c (c_getstr): Move to...
	* fold-const.c (c_getstr): ...here.

2015-11-07  Richard Sandiford  <richard.sandiford@arm.com>

	* builtins.def (BUILTIN_RINT, BUILTIN_RINTF, BUILTIN_RINTL): Use
	ATTR_MATHFN_FPROUNDING rather than ATTR_MATHFN_FPROUNDING_ERRNO.

2015-11-07  Richard Sandiford  <richard.sandiford@arm.com>

	* tree-call-cdce.c (shrink_wrap_one_built_in_call): Try to update
	the dominance info; free it if we can't.
	(pass_call_cdce::execute): Don't free the dominance info here.

2015-11-06  Jeff Law <jeff@redhat.com>

	* tree-ssa-threadedge.c (dummy_simplify): Remove.
	(thread_around_empty_blocks): Remove backedge_seen_p argument.
	If we thread to a backedge, then return false.  Update recursive
	call to eliminate backedge_seen_p argument.
	(thread_through_normal_block): Remove backedge_seen_p argument.
	Remove backedge_seen_p argument from calls to
	thread_around_empty_blocks.  Remove checks on backedge_seen_p.
	If we thread to a backedge, then return 0.
	(thread_across_edge): Remove bookkeeping for backedge_seen.  Don't
	pass it to thread_through_normal_block or thread_through_empty_blocks.
	For joiner handling, if we see a backedge, do not try normal
	threading.

2015-11-06  Abderrazek Zaafrani  <a.zaafrani@samsung.com>

	* graphite-optimize-isl.c (optimize_isl): Call isl_union_map_is_equal.
	* graphite-poly.c (new_scop): Initialize original_schedule.
	(free_scop): Free original_schedule.
	* graphite-poly.h (struct scop): Add field original_schedule.
	* graphite-sese-to-poly.c (build_scop_original_schedule): New.
	(build_poly_scop): Call build_scop_original_schedule.

2015-11-06  Abderrazek Zaafrani  <a.zaafrani@samsung.com>
